--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,3 @@ input {
 h1, h2, h3, h4, h5, h6, label, p {
   user-select: none;
 }
-.keyboard-placeholder {
-  height: env(keyboard-inset-height, 0);
-}
